--- a/client/app.json
+++ b/client/app.json
@@ -1,13 +1,44 @@
 {
-  "pages":[
-    "pages/index/index",
-    "pages/addCgi/addCgi"
-  ],
-  "window":{
-    "backgroundColor":"#F6F6F6",
-    "backgroundTextStyle":"light",
-    "navigationBarBackgroundColor": "#F6F6F6",
-    "navigationBarTitleText": "点将啦",
-    "navigationBarTextStyle":"black"
-  }
+    "pages": [
+        "pages/home/home",
+        "pages/index/index",
+        "pages/addCgi/addCgi"
+    ],
+    "window": {
+        "backgroundColor": "#f54203",
+        "backgroundTextStyle": "light",
+        "navigationBarBackgroundColor": "#f54203",
+        "navigationBarTitleText": "点将啦",
+        "navigationBarTextStyle": "white"
+    },
+    "tabBar": {
+        "color":"#5a5a5a",
+        "selectedColor":"#f54203",
+        "borderStyle":"black",
+        "backgroundColor":"#fff",
+        "list": [
+            {
+                "pagePath": "pages/home/home",
+                "text": "首页"
+            },
+            {
+                "pagePath": "pages/index/index",
+                "text": "案例首页"
+            },
+            {
+                "pagePath": "pages/addCgi/addCgi",
+                "text": "CGI界面"
+            },
+            {
+                "pagePath": "pages/addCgi/addCgi",
+                "text": "CGI界面"
+            }
+        ]
+    },
+    "networkTimeout": {
+        "request": 10000,
+        "downloadFile": 10000,
+        "uploadFile":10000
+    },
+    "debug": true
 }
