--- a/client/app.json
+++ b/client/app.json
@@ -1,7 +1,7 @@
 {
     "pages": [
-        "pages/personal/personal",
         "pages/home/home",
+        "pages/personal/personal",
         "pages/login/login",
         "pages/index/index",
         "pages/addCgi/addCgi"
@@ -26,7 +26,7 @@
             },
             {
                 "pagePath": "pages/index/index",
-                "text": "案例首页"
+                "text": "所有设计师"
             },
             {
                 "pagePath": "pages/addCgi/addCgi",
